// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group Snaphots should adjust border radii 1`] = `
.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.375rem;
  background: #fff;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  width: 100%;
}

.emotion-0 {
  width: 100%;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  box-sizing: border-box;
  height: 2.25rem;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border: solid 1px transparent;
  background: transparent;
  color: #494c4c;
  min-width: 0;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
}

.emotion-0:disabled {
  opacity: 1;
}

.emotion-0::-webkit-input-placeholder {
  color: #abb3b3;
}

.emotion-0::-moz-placeholder {
  color: #abb3b3;
}

.emotion-0:-ms-input-placeholder {
  color: #abb3b3;
}

.emotion-0::placeholder {
  color: #abb3b3;
}

.emotion-0:focus,
.emotion-0:active {
  outline: none;
}

.emotion-0:not([disabled]):not([readonly]):hover + div {
  border-color: #9ba0ab;
}

.emotion-0:not([disabled]):not([readonly]):focus + div {
  border-color: #2875c6;
}

.emotion-0:not([disabled]):not([readonly]):active + div {
  border-color: #2875c6;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  border-radius: 0.1875rem;
  background: transparent;
  box-shadow: inset 0 0.0625rem 0.125rem rgba(56,61,61,0.1);
  border: solid 1px #c4cacc;
  -webkit-transition: border-color 100ms ease-in-out;
  transition: border-color 100ms ease-in-out;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-10:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-10:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-10 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-10:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-10:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-10.cr-button--hover,
.emotion-10.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-10.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8 .emotion-7:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-12 emotion-13"
>
  <div
    className="emotion-4 emotion-5"
  >
    <input
      className="emotion-0 emotion-1"
    />
    <div
      className="emotion-2 emotion-3"
    />
  </div>
  <button
    className="  emotion-10 emotion-11"
    size="medium"
    type="button"
  >
    <span
      className="emotion-8 emotion-9"
    >
      <span
        className="emotion-6 emotion-7"
      >
        action
      </span>
    </span>
  </button>
</div>
`;

exports[`Group Snaphots should adjust border radii when surrounded 1`] = `
.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.375rem;
  background: #fff;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  width: 100%;
}

.emotion-6 {
  width: 100%;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  box-sizing: border-box;
  height: 2.25rem;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  border: solid 1px transparent;
  background: transparent;
  color: #494c4c;
  min-width: 0;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
}

.emotion-6:disabled {
  opacity: 1;
}

.emotion-6::-webkit-input-placeholder {
  color: #abb3b3;
}

.emotion-6::-moz-placeholder {
  color: #abb3b3;
}

.emotion-6:-ms-input-placeholder {
  color: #abb3b3;
}

.emotion-6::placeholder {
  color: #abb3b3;
}

.emotion-6:focus,
.emotion-6:active {
  outline: none;
}

.emotion-6:not([disabled]):not([readonly]):hover + div {
  border-color: #9ba0ab;
}

.emotion-6:not([disabled]):not([readonly]):focus + div {
  border-color: #2875c6;
}

.emotion-6:not([disabled]):not([readonly]):active + div {
  border-color: #2875c6;
}

.emotion-2 {
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 .emotion-1:not(:first-of-type) {
  margin-left: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-4:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-4:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-4 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-4:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-4:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-4.cr-button--hover,
.emotion-4.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-4.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-8 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  border-radius: 0.1875rem;
  background: transparent;
  box-shadow: inset 0 0.0625rem 0.125rem rgba(56,61,61,0.1);
  border: solid 1px #c4cacc;
  -webkit-transition: border-color 100ms ease-in-out;
  transition: border-color 100ms ease-in-out;
  border-left: 0;
  border-right: 0;
  border-radius: 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
  -webkit-transition-property: background,border,box-shadow,color;
  transition-property: background,border,box-shadow,color;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
  border: 1px solid;
  cursor: pointer;
  min-height: 2.25rem;
  padding-top: 0.375rem;
  padding-bottom: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  width: medium;
  height: medium;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-image: linear-gradient(to bottom,#fff,#f3f3f3);
  background-color: #f3f3f3;
  border-color: #c4cacc;
  color: #494c4c;
  box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.15);
}

.emotion-16:disabled {
  pointer-events: none;
  cursor: default;
  opacity: 0.5;
  box-shadow: none;
}

.emotion-16:focus {
  outline: thin dotted;
  box-shadow: none;
}

.emotion-16 svg {
  fill: #494c4c;
  color: #fff;
}

.emotion-16:hover {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-16:active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

.emotion-16.cr-button--hover,
.emotion-16.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  border-color: #abb3b3;
}

.emotion-16.cr-button--active {
  color: #494c4c;
  background-image: none;
  background-color: #f3f3f3;
  box-shadow: rgba(12,13,13,0.18) 0px 0px 0.375rem inset;
  border-color: #abb3b3;
}

<div
  className="emotion-18 emotion-19"
>
  <button
    className="  emotion-4 emotion-5"
    size="medium"
    type="button"
  >
    <span
      className="emotion-2 emotion-3"
    >
      <span
        className="emotion-0 emotion-1"
      >
        action
      </span>
    </span>
  </button>
  <div
    className="emotion-10 emotion-11"
  >
    <input
      className="emotion-6 emotion-7"
    />
    <div
      className="emotion-8 emotion-9"
    />
  </div>
  <button
    className="  emotion-16 emotion-5"
    size="medium"
    type="button"
  >
    <span
      className="emotion-2 emotion-3"
    >
      <span
        className="emotion-0 emotion-1"
      >
        action
      </span>
    </span>
  </button>
</div>
`;
